- Display more helpful message for "(NS_ERROR_FILE_ACCESS_DENIED) [nsIFile.remove]" error when a remotely modified file is in use locally on Windows - Fix a potential NS_ERROR_TARGET_FILE_EXISTS error from a recent commit - Fix alignment of sync error icon

--- a/chrome/content/zotero-platform/mac/overlay.css
+++ b/chrome/content/zotero-platform/mac/overlay.css
@@ -57,6 +57,11 @@
   -moz-padding-start: 8px;
 }
 
+#zotero-tb-sync-warning[error=true]
+{
+	margin-bottom: 2px;
+}
+
 .zotero-tb-button[open="true"] > .toolbarbutton-icon,
 .zotero-tb-button:hover:active > .toolbarbutton-icon, 
 #zotero-pane-stack[fullscreenmode="true"] #zotero-tb-fullscreen > .toolbarbutton-icon {
